Tweak and refactor foreign downcalls code
Change (and rename) MemoryAssignment to use register objects.
Change comment format, rename some things, fix code style, ...
Add cost estimate to CFunctionEpilogue (when applicable).
Update to JDK21.
Tweak error message.